configsync/asm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  annotations:
    configmanagement.gke.io/managed: disabled
