configsync/asm/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: external-hosts-mTLS-egress-gateway
  namespace: istio-system
spec:
  hosts:
  - example.com
  - httpbin.org
  gateways:
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: target-egress-gateway-mTLS
        port:
          number: 80
      weight: 100

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-com-through-egress-gateway
  namespace: istio-system
spec:
  hosts:
  - example.com
  gateways:
  - istio-system/egress-gateway
  http:
  - match:
    - gateways:
      - istio-system/egress-gateway
      port: 80
    route:
    - destination:
        host: example.com
        port:
          number: 80
      weight: 100

  # - match:
  #   - gateways:
  #     - istio-system/egress-gateway
  #     port: 80
  #     uri:
  #       prefix: "httpbin.org"
  #   route:
  #   - destination:
  #       host: httpbin.org
  #       port:
  #         number: 80
  #     weight: 100


# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: external-hosts-through-egress-gateway
#   namespace: istio-system
# spec:
#   hosts:
#   - example.com
#   - httpbin.org
#   - google.com
#   gateways:
#   - istio-system/egress-gateway
#   - mesh
#   http:
#   - match:
#     - gateways:
#       - mesh
#       port: 80
#     route:
#     - destination:
#         host: istio-egressgateway.istio-system.svc.cluster.local
#         subset: target-egress-gateway-mTLS
#         port:
#           number: 80
#       weight: 100
#   - match:
#     - gateways:
#       - istio-system/egress-gateway
#       port: 80
#       uri:
#         prefix: "example.com"
#     route:
#     - destination:
#         host: example.com
#         port:
#           number: 80
#       weight: 100
#   - match:
#     - gateways:
#       - istio-system/egress-gateway
#       port: 80
#       uri:
#         prefix: "httpbin.org"
#     route:
#     - destination:
#         host: httpbin.org
#         port:
#           number: 80
#       weight: 100
#   # exportTo:
#   # - 'istio-system'
#   # - 'team-x'
